Kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deno-api-service
spec:
  selector:
    app: deno-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
